fixed spacing issue for tiny screen

--- a/src/pages/service/service.scss
+++ b/src/pages/service/service.scss
@@ -191,7 +191,7 @@
 			h4 {
 				font-size: 1rem;
 				padding-left: 10%;
-				// margin-top: 20px;
+				margin-top: 30px;
 			}
 
 			.service__content{
